tests/baselines/reference/parserExportAssignment5.errors.txt
parserExportAssignment5.ts(2,5): error TS1063: An export assignment cannot be used in a namespace.


==== parserExportAssignment5.ts (1 errors) ====
    module M {
        export = A;
        ~~~~~~~~~~~
!!! error TS1063: An export assignment cannot be used in a namespace.
    }